# dioxus-template

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  cargo-generate.toml
Desktop/: Cargo.toml  Dioxus.toml  README.md  cargo-generate.toml
Desktop/src/: main.rs
Fullstack/: Cargo.toml  Dioxus.toml  README.md  cargo-generate.toml
Fullstack/src/: main.rs
Liveview/: Cargo.toml  Dioxus.toml  README.md  cargo-generate.toml
Liveview/src/: main.rs
TUI/: Cargo.toml  README.md
TUI/src/: main.rs
Web/: .gitignore  Cargo.toml  Dioxus.toml  README.md  cargo-generate.toml
Web/src/: main.rs
dead-src/: main.rs
src/: main.rs
src/utils/: platform.rs
