[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
{% if platform == "liveview" %}
dioxus = { version = "0.4" }
tokio = { version = "1.27.0", features = ["full"] }
{% if backend == "Axum" %}
dioxus-liveview = { version = "0.4", features = ["axum"] }
axum = { version = "0.6.12", features = ["ws"] }
{% endif %}
{% if backend == "Salvo" %}
dioxus-liveview = { version = "0.4", features = ["salvo"] }
salvo = { version = "0.37.9", features = ["ws"] }
{% endif %}
{% if backend == "Warp" %}
dioxus-liveview = { version = "0.4", features = ["warp"] }
warp = { version = "0.3.3" }
{% endif %}
{% endif %}
{% if platform == "web" %}
dioxus-web = { version = "0.4" }
dioxus = { version = "0.4" }
{% endif %}
{% if platform == "desktop" %}
dioxus-desktop = { version = "0.4" }
dioxus = { version = "0.4" }
{% endif %}
{% if platform == "TUI" %}
dioxus-tui = { version = "0.4" }
dioxus = { version = "0.4" }
{% endif %}
{% if platform == "fullstack" %}
{% if router %}
dioxus-fullstack = { version = "0.4", features = ["router"] }
{% else %}
dioxus-fullstack = { version = "0.4" }
{% endif %}
dioxus = { version = "0.4" }
serde = { version = "1.0.159", features = ["derive"] }
{% endif %}
{% if router %}
{% if platform == "web" %}
dioxus-router = { version = "0.4", features = ["web"] }
{% else %}
dioxus-router = { version = "0.4" }
{% endif %}
{% endif %}

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
{% if platform == "web" %}
console_error_panic_hook = "0.1.7"
{% endif %}

{% if platform == "fullstack" %}
[features]
default = []
{% if backend == "Axum" %}
ssr = ["dioxus-fullstack/axum"]
{% endif %}
{% if backend == "Salvo" %}
ssr = ["dioxus-fullstack/salvo"]
{% endif %}
{% if backend == "Warp" %}
ssr = ["dioxus-fullstack/warp"]
{% endif %}
{% if router %}
web = ["dioxus-router/web", "dioxus-fullstack/web"]
{% else %}
web = ["dioxus-fullstack/web"]
{% endif %}
{% endif %}
