[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
{% if platform == "liveview" %}
tokio = { version = "1.27.0", features = ["full"] }
{% if backend == "Axum" %}
dioxus = { version = "0.5.0-alpha.0", features = ["liveview", "axum"] }
axum = { version = "0.6.12", features = ["ws"] }
{% endif %}
{% if backend == "Salvo" %}
dioxus = { version = "0.5.0-alpha.0", features = ["liveview", "salvo"] }
salvo = { version = "0.37.9", features = ["ws"] }
{% endif %}
{% if backend == "Warp" %}
dioxus = { version = "0.5.0-alpha.0", features = ["liveview", "warp"] }
warp = { version = "0.3.3" }
{% endif %}
{% endif %}
{% if platform == "web" %}
dioxus = { version = "0.5.0-alpha.0", features = ["web"] }
{% endif %}
{% if platform == "desktop" %}
dioxus = { version = "0.5.0-alpha.0", features = ["desktop"] }
{% endif %}
{% if platform == "TUI" %}
dioxus = { version = "0.5.0-alpha.0", features = ["tui"] }
{% endif %}

{% if platform == "fullstack" %}
{% if router %}
dioxus-fullstack = { version = "0.5.0-alpha.0", features = ["router"] }
{% else %}
dioxus-fullstack = { version = "0.5.0-alpha.0" }
{% endif %}
dioxus = { version = "0.5.0-alpha.0" }
serde = { version = "1.0.159", features = ["derive"] }
{% endif %}
{% if router %}


{% if platform == "web" %}
dioxus-router = { version = "0.5.0-alpha.0", features = ["web"] }
{% else %}
dioxus-router = { version = "0.5.0-alpha.0" }
{% endif %}
{% endif %}

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
{% if platform == "web" %}
console_error_panic_hook = "0.1.7"
{% endif %}

{% if platform == "fullstack" %}
[features]
default = []
{% if backend == "Axum" %}
ssr = ["dioxus/axum"]
{% endif %}
{% if backend == "Salvo" %}
ssr = ["dioxus/salvo"]
{% endif %}
{% if backend == "Warp" %}
ssr = ["dioxus/warp"]
{% endif %}
{% if router %}
web = ["dioxus/router", "dioxus/web"]
{% else %}
web = ["dioxus/web"]
{% endif %}
{% endif %}
