[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
{% if router %}
dioxus = { version = "0.5", features = ["fullstack", "router"] }
{% else %}
dioxus = { version = "0.5", features = ["fullstack"] }
{% endif %}

# Debug
dioxus-logger = "0.5.1"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]