[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
{% if router %}
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["fullstack", "router"] }
{% else %}
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["fullstack"] }
{% endif %}

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]