[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

{% if router %}
dioxus = { version = "0.5", features = ["web", "router"] }
{% else %}
dioxus = { version = "0.5", features = ["web"] }
{% endif %}


# Debug
dioxus-logger = "0.5.1"